--- a/backend/package.json
+++ b/backend/package.json
@@ -1,2 +1,9 @@
 {
-  "name":"users-api","version":"1.0.0"}
+  "name": "users-api",
+  "version": "1.0.0",
+  "main": "index.js",
+  "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.590.0"
+  }
+}
+
